<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FriendsTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="friends">FRIENDS</string>
    <string name="tracker">TRACKER</string>
    <string name="username">Username/EmailID</string>
    <string name="password">Password</string>
    <string name="signin">SignIn</string>
    <string name="signup">SignUp</string>
    <string name="name">Name</string>
    <string name="disp_name">Display Name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
     <string name="tap">tap to upload</string>
    <string name="signupfacebook">Signin with Facebook</string>
    <string name="abt_indy">Copyright @ 2015 Indybots Technology</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_sign_up_screen">SignUpScreen</string>

</resources>
